<resources>
    <string name="app_name">DermaSeer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_web_client_id">773749053838-n6gk8e157a6etepp9sh1l0e9q5j213hp.apps.googleusercontent.com</string>
    <string name="image_product_list">image product list</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="list_product_appbar_title">Product List</string>
    <string name="article_description">Article Description</string>
    <string name="article_title">Article Title</string>
    <string name="article_image">Article Image</string>
    <string name="icnextReadarticle">icNextReadArticle</string>
    <string name="list_article_appbar_title">Health Articles</string>
    <string name="onboardingimage">OnBoardingImage</string>
    <string name="welcome_word">Welcome to DermaSeer</string>
    <string name="onBoardingDescription">We provide a skincare recommendation system tailored to your acne problems.</string>
    <string name="next_button">Next</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="user_age">User Age</string>
    <string name="user_gender">User Gender</string>
    <string name="profile_appbar_title">Profile</string>
    <string name="language">Language</string>
    <string name="icon_language">icon language</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="image_edit_profile_button">Image Edit Profile Button</string>
    <string name="setting_title">Settings</string>
    <string name="change_language_button">Change Language Button</string>
    <string name="delete_account_button">Delete Account Button</string>
    <string name="preview_appbar_title">Preview</string>
    <string name="retake">Retake</string>
    <string name="analyze">Analyze</string>
    <string name="image_preview_foto">Image Preview Photo</string>
    <string name="preview_text_desc">*Ensure the captured image is clear for better analysis results.</string>
    <string name="arrowhistory">arrowHistory</string>
    <string name="acne_type">Papules, Cysts</string>
    <string name="acne_type_title">Acne Type:</string>
    <string name="acne_number_title">Total Acne:</string>
    <string name="history_image">HistoryImage</string>
    <string name="acne_number">4</string>
    <string name="date_scan">07 November 2024</string>
    <string name="analyze_history_appbar_title">Analysis History</string>
    <string name="edit_profile_appbar_title">Edit Profile</string>
    <string name="edit_name_title">Name</string>
    <string name="edit_email_title">Email</string>
    <string name="edit_age_title">Age</string>
    <string name="Gender">Gender</string>
    <string name="man_radio">Male</string>
    <string name="woman_radio">Female</string>
    <string name="save">Save</string>
    <string name="product_name_label">"Product Name: "</string>
    <string name="produk">Something</string>
    <string name="rating_label">"Rating: "</string>
    <string name="price_label">"Price: "</string>
    <string name="description_label">"Description: "</string>
    <string name="rating">4.7</string>
    <string name="product_description">Product Description</string>
    <string name="buy_now">Buy Now</string>
    <string name="price_of_product">Rp.100.000</string>
    <string name="detail_product_appbar_label">Product Details</string>
    <string name="ayo_lengkapi_data_dirimu">Complete your data</string>
    <string name="harap_isi_data_berikut_dengan_benar">Please fill out the following data correctly</string>
    <string name="nama">Name</string>
    <string name="usia">Age</string>
    <string name="jenis_kelamin">Gender</string>
    <string name="laki_laki">Male</string>
    <string name="perempuan">Female</string>
    <string name="simpan">Save</string>
    <string name="save_profile_info">*You can update it on the profile page</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="signin_title">Let\'s solve your skin problems</string>
    <string name="signin_subtitle">Have you found the right solution for your skin problems? If not, let\'s find out together with us!</string>
    <string name="artikel_kesehatan">Health Articles</string>
    <string name="produk_perawatan">Care Products</string>
    <string name="riwayat_terbaru">Latest History</string>
    <string name="moisturizer">Moisturizer</string>
    <string name="serum">Serum</string>
    <string name="facewash">Facewash</string>
    <string name="sunscreen">Sunscreen</string>
    <string name="scan_reslut_appbar_title">Analysis Result</string>
    <string name="diagnose">Diagnoses</string>
    <string name="diganose_result">Diagnose Result</string>
    <string name="select_the_product_recommendation_type">Select the Product recommendation type:</string>
    <string name="choose_your_skin_problem">Choose your skin problem :</string>
    <string name="dry">Dry</string>
    <string name="oily">Oily</string>
    <string name="sensitive">Sensitive</string>
    <string name="see_recommendations">See Recommendations</string>
    <string name="treatment_recommendations">Treatment Recommendations : </string>
    <string name="recommendation_result">Recommendation Result</string>
    <string name="product_recommendations">Product Recommendations : </string>
    <string name="our_recommendations">Our Recommendations</string>
    <string name="retry">Retry</string>
    <string name="timeout">Timeout</string>
    <string name="ok">OK</string>
    <string name="please_wait">Please, wait…</string>
    <string name="delete_account_success">Delete account success</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_out_success">Sign out success</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="update_data_success">Update data success</string>
    <string name="update_data_failed">Update data failed</string>
    <string name="complete_data_failed">Complete data failed</string>
    <string name="welcome_to_dermaseer">Welcome to DermaSeer!</string>
    <string name="fill_out_all_fields">Fill out all fields!</string>
    <string name="unable_open_link">Unable to open the link</string>
    <string name="confirm_delete_account">Confirm delete account</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="are_you_sure_delete_account">Are you sure to delete this account?</string>
    <string name="confirm_sign_out">Confirm Sign out</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="are_you_sure_sign_out">Are you sure to sign out?</string>
    <string name="cancel_scan">Cancel scan</string>
    <string name="are_you_sure_cancel_scan">Are you sure to cancel scan right now?</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="are_you_sure_exit">Are you sure you want to exit the app?</string>
    <string name="age_format">%1$d Years old</string>
    <string name="matched_ingredients">Matched Ingredients:</string>
    <string name="ingredient">Ingredient</string>
    <string name="enter_your_name">Input your name…</string>
    <string name="enter_your_age">Input your age…</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="toner">Toner</string>
    <string name="Pelembab">Pelembab Wajah</string>
    <string name="essence">Essence Wajah</string>
    <string name="pembersih">" Pembersih Wajah"</string>
    <string name="Sunscreen">Sunscreen Wajah</string>
    <string name="not_available">Not Available</string>
    <string name="treatment_not_available">Recommendation treatment is not available because you didn\'t request a recommendation.</string>
    <string name="acne_type_label">Acne Type: %1$s</string>
    <string name="you_don_t_have_history_yet">You don\'t have history yet</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="close">Close</string>
</resources>
