<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".ui.onboarding.OnBoardingFragment">

    <ImageView
        android:id="@+id/imageOnBoarding"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:contentDescription="@string/onboardingimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/onboarding" />

    <TextView
        android:id="@+id/welcomeWord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.6"
        android:text="@string/welcome_word"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/imageOnBoarding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/descriptionOnBoarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/onBoardingDescription"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/welcomeWord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/next_button"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
