<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/date_scan"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/cardHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/line"
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:background="#4D4D4D"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/cardHistory"
        app:layout_constraintStart_toEndOf="@id/tvDate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        app:contentPadding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:contentDescription="@string/history_image"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/CustomHistoryImage"
                tools:srcCompat="@drawable/noimage" />

            <TextView
                android:id="@+id/acneTypeTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_semibold"
                android:paddingHorizontal="8dp"
                android:text="@string/acne_type_title"
                android:textColor="@color/text_black"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/image_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/acneType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/acne_type"
                android:textColor="@color/text_black"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/acneTypeTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                app:layout_constraintStart_toEndOf="@id/image_view"
                app:layout_constraintTop_toBottomOf="@+id/acneType">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_product_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/moisturizer"
                    android:textColor="@color/primary_blue"
                    android:textSize="11sp"
                    app:chipBackgroundColor="@color/form_blue"
                    app:chipCornerRadius="100dp"
                    app:chipStrokeColor="@color/transparent"
                    tools:ignore="SmallSp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_skin_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/toner"
                    android:textColor="@color/primary_blue"
                    android:textSize="11sp"
                    app:chipBackgroundColor="@color/form_blue"
                    app:chipCornerRadius="100dp"
                    app:chipStrokeColor="@color/transparent"
                    tools:ignore="SmallSp" />

            </com.google.android.material.chip.ChipGroup>

            <ImageView
                android:id="@+id/icon_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/arrowhistory"
                android:src="@drawable/arrow_right_01_stroke_rounded"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
